# agentkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
agentkit/: __init__.py  selfimproving.py  types.py
agentkit-studio/: .gitignore  CLAUDE.md  DESIGN.md  HANDOFF-score-improvement.md  README.md  SPEC.md  restart.sh
agentkit-studio/backend/: pyproject.toml
agentkit-studio/backend/studio/: __init__.py  app.py  artifact_lint.py  backends.py  client.py  epoch_gate.py  events.py  export.py  loops.py  models.py  rubric.py  runner.py  session.py  shared_bridge.py  skills_paths.py  task_runs.py  templates.py  tools.py  workspace.py
agentkit-studio/backend/studio/panels/: __init__.py  dag.py  evolve.py  hillclimb.py  loopdoctor.py  memory.py  router.py  security.py  selfimprove.py  verify.py
agentkit-studio/backend/tests/: conftest.py  test_artifact_lint.py  test_artifact_store.py  test_backends.py  test_chat_flatten.py  test_client.py  test_events.py  test_export.py  test_fetch_cache.py  test_ledger.py  test_loopdoctor.py  test_loops.py  test_m8_m9_helpers.py  test_memory_filter.py  test_miner_window.py  test_models.py  test_patcher.py  test_rubric.py  test_rubric_adjusted.py  test_runner.py  test_similar_runs.py  test_sizing.py  test_skills_paths.py  test_templates.py  test_tools.py  test_workspace.py
agentkit-studio/backend/tests/fixtures/: catalog_sample.json  report_good.md  report_thin.md
agentkit-studio/backend/tmp/studio-workspaces/s_de2df7743448/: result.md
agentkit-studio/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
agentkit/agent/: __init__.py  batch.py  loop.py  roles.py  router.py
agentkit/artifacts/: __init__.py  dedup.py  (+7 more)
bench/: bench_compactor.py  bench_reference_agent.py
docs/: DESIGN.md  PROPOSAL-superagent.md  REPLAN-agentkit.md
examples/: dynamic_topology_e2e.py  eval_fullstack.py  eval_integration.py  eval_long_memory.py  eval_memory_quality.py  eval_tiered_memory.py  fakes.py  mesh_a2a_demo.py  research_agent.py  research_live.py  run_measured.py  topology_all_demo.py  topology_pipeline_demo.py  topology_routing_demo.py
tests/: test_anthropic_client.py  test_backends.py  test_batch.py  test_codegen.py  test_compactor.py  test_config.py  test_dynamic_topology.py  test_e2e_dynamic_topology.py  test_e2e_self_improving.py  test_evolve.py  test_fanout_budget.py  test_gates.py  test_memory.py  test_openai_compat.py  test_orchestrator.py  test_planner.py  test_quality.py  test_readme_examples.py  test_reference_agent.py  test_roles.py  test_runtime_pool.py  test_sandbox.py  test_selfimproving.py  test_skills.py  test_streaming.py  test_subagent.py  test_tiered_routing.py  test_tools_fs.py  test_topology.py
(+119 files in other folders)
